css-index.html-header, hero

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,111 +30,126 @@
     </header>
 
     <main>
-      <!-- Фильтр -->
-      <section>
-        <h1>Фильтр</h1>
-        <ul>
-          <li>Все</li>
-          <li>Веб-сайты</li>
-          <li>Приложения</li>
-          <li>Дизайн</li>
-          <li>Маркетинг</li>
-        </ul>
-      </section>
-
       <!-- Примеры работ -->
       <section>
         <h1>Примеры работ</h1>
+
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+
         <ul>
           <li>
-            <img
-              src="./img/portfolio-1.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <a href="">
+              <img
+                src="./img/portfolio-1.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-2.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <a href="">
+              <img
+                src="./img/portfolio-2.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-3.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <a href="">
+              <img
+                src="./img/portfolio-3.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-4.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <a href="">
+              <img
+                src="./img/portfolio-4.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-5.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <a href="">
+              <img
+                src="./img/portfolio-5.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-6.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Приложение</h2>
-            <p>Веб-сайт</p>
+            <a href="">
+              <img
+                src="./img/portfolio-6.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Приложение</h2>
+              <p>Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-7.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <a href="">
+              <img
+                src="./img/portfolio-7.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-8.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <a href="">
+              <img
+                src="./img/portfolio-8.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./img/portfolio-9.png"
-              alt="Фото работы"
-              width="370"
-              height="294"
-            />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <a href="">
+              <img
+                src="./img/portfolio-9.png"
+                alt="Фото работы"
+                width="370"
+                height="294"
+              />
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
