--- a/index.html
+++ b/index.html
@@ -4,26 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wed Studio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
-        <a href="./index.html" lang="en">WebStudio</a>
+      <nav class="nav">
+        <a href="./index.html" lang="en" class="logo"
+          >Web<span class="logo-nav">Studio</span></a
+        >
 
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+        <ul class="list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="#" class="link">Контакты</a></li>
         </ul>
 
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link contact"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+38096111111">+38 096 111 11 11</a>
+            <a href="tel:+38096111111" class="link contact"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </nav>
@@ -31,39 +42,39 @@
 
     <main>
       <!-- Герой -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="#">Заказать услугу</a>
+      <section class="hero">
+        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
+        <a href="#" class="link">Заказать услугу</a>
       </section>
 
       <!-- Особенности -->
       <section>
-        <h2>Наши особенности</h2>
+        <h2 class="title">Наши особенности</h2>
 
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -74,9 +85,9 @@
 
       <!-- Чем мы занимаемся -->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="title">Чем мы занимаемся</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./img/box-1.png"
@@ -106,9 +117,9 @@
 
       <!-- Команда -->
       <section>
-        <h2>Наша команда</h2>
+        <h2 class="title">Наша команда</h2>
 
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./img/team-1.png"
@@ -116,7 +127,7 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
@@ -126,7 +137,7 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="title">Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
@@ -136,7 +147,7 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
+            <h3 class="title">Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -146,7 +157,7 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="title">Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
@@ -155,12 +166,14 @@
 
     <!-- Подвал -->
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <a href="https://goo.gl/maps/bzkinhmpRiBep3HJ8"
-        >г. Киев, пр-т Леси Украинки, 26
-      </a>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <a href="./index.html" class="logo">WebStudio</a>
+      <address>
+        <a href="https://goo.gl/maps/bzkinhmpRiBep3HJ8" class="link"
+          >г. Киев, пр-т Леси Украинки, 26
+        </a>
+        <a href="mailto:info@example.com" class="link">info@example.com</a>
+        <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
