--- a/index.html
+++ b/index.html
@@ -13,28 +13,26 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <nav class="nav">
+    <header class="site-header">
+      <nav class="site-nav">
         <a href="./index.html" lang="en" class="logo"
-          >Web<span class="logo-nav">Studio</span></a
+          >Web<span class="logo-end">Studio</span></a
         >
 
-        <ul class="list">
-          <li><a href="./index.html" class="link">Студия</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link active">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="#" class="link">Контакты</a></li>
         </ul>
 
-        <ul class="list">
+        <ul class="auth-nav list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link contact"
+            <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+38096111111" class="link contact"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+38096111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
@@ -42,40 +40,40 @@
 
     <main>
       <!-- Герой -->
-      <section class="hero">
-        <h1 class="title">Эффективные решения для вашего бизнеса</h1>
-        <a href="#" class="link">Заказать услугу</a>
+      <section class="site-hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <a href="#" class="link hero-button">Заказать услугу</a>
       </section>
 
       <!-- Особенности -->
-      <section>
-        <h2 class="title">Наши особенности</h2>
+      <section class="section">
+        <h2 class="section-title">Наши особенности</h2>
 
-        <ul class="list">
+        <ul class="feature-list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -83,11 +81,11 @@
         </ul>
       </section>
 
-      <!-- Чем мы занимаемся -->
-      <section>
-        <h2 class="title">Чем мы занимаемся</h2>
+      <!-- Наши работы -->
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
 
-        <ul class="list">
+        <ul class="work-list">
           <li>
             <img
               src="./img/box-1.png"
@@ -116,10 +114,10 @@
       </section>
 
       <!-- Команда -->
-      <section>
-        <h2 class="title">Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
 
-        <ul class="list">
+        <ul class="team-list">
           <li>
             <img
               src="./img/team-1.png"
@@ -165,14 +163,18 @@
     </main>
 
     <!-- Подвал -->
-    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+    <footer class="site-footer">
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-end">Studio</span></a
+      >
       <address>
-        <a href="https://goo.gl/maps/bzkinhmpRiBep3HJ8" class="link"
+        <a href="https://goo.gl/maps/bzkinhmpRiBep3HJ8" class="link map"
           >г. Киев, пр-т Леси Украинки, 26
         </a>
-        <a href="mailto:info@example.com" class="link">info@example.com</a>
-        <a href="tel:+380991111111" class="link">+38 099 111 11 11</a>
+        <a href="mailto:info@example.com" class="link contact"
+          >info@example.com</a
+        >
+        <a href="tel:+380991111111" class="link contact">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
