--- a/portfolio.html
+++ b/portfolio.html
@@ -3,27 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wed Studio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="site-header">
+      <nav class="site-nav">
+        <a href="./index.html" lang="en" class="logo"
+          >Web<span class="logo-end">Studio</span></a
+        >
 
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link active">Портфолио</a></li>
+          <li><a href="#" class="link">Контакты</a></li>
         </ul>
 
-        <ul>
+        <ul class="auth-nav list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+38096111111">+38 096 111 11 11</a>
+            <a href="tel:+38096111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </nav>
@@ -31,140 +40,160 @@
 
     <main>
       <!-- Примеры работ -->
-      <section>
-        <h1>Примеры работ</h1>
+      <section class="section">
+        <h1 class="section-title">Примеры работ</h1>
 
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
-        </ul>
+        <div>
+          <ul class="filtr-list">
+            <li><button type="button" class="button active">Все</button></li>
+            <li>
+              <button type="button" class="button">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="button">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
 
-        <ul>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-1.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-2.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-3.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-4.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-5.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-6.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Приложение</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-7.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-8.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./img/portfolio-9.png"
-                alt="Фото работы"
-                width="370"
-                height="294"
-              />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-        </ul>
+        <div>
+          <ul class="example-list">
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-1.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-2.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="text">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-3.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="text">Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-4.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                <p class="text">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-5.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+                <p class="text">Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-6.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Приложение</h2>
+                <p class="text">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-7.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">
+                  Издание <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="text">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-8.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title">Проект LAB</h2>
+                <p class="text">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="link">
+                <img
+                  src="./img/portfolio-9.png"
+                  alt="Фото работы"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="title" lang="en">Growing Business</h2>
+                <p class="text">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Подвал -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="site-footer">
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-end">Studio</span></a
+      >
       <address>
-        <a href="https://goo.gl/maps/bzkinhmpRiBep3HJ8"
+        <a href="https://goo.gl/maps/bzkinhmpRiBep3HJ8" class="link map"
           >г. Киев, пр-т Леси Украинки, 26
         </a>
+        <a href="mailto:info@example.com" class="link contact"
+          >info@example.com</a
+        >
+        <a href="tel:+380991111111" class="link contact">+38 099 111 11 11</a>
       </address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
     </footer>
   </body>
 </html>
