--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Герой -->
       <section class="site-hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <a href="#" class="link hero-button">Заказать услугу</a>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
       <!-- Особенности -->
